// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/devices/DeviceQueryClause matches snapshot 1`] = `
<section
  className="search-pill active"
  key="query-0"
>
  <StyledWithResponsiveMode
    ariaLabel="deviceLists.query.searchPills.clause.parameterType.ariaLabel"
    className="parameter-type"
    componentRef={
      Object {
        "current": null,
      }
    }
    onChange={[Function]}
    options={
      Array [
        Object {
          "key": "dcm",
          "text": "deviceLists.query.searchPills.clause.parameterType.items.capabilityModelId",
        },
        Object {
          "key": "interface",
          "text": "deviceLists.query.searchPills.clause.parameterType.items.interfaceId",
        },
        Object {
          "key": "status",
          "text": "deviceLists.query.searchPills.clause.parameterType.items.status",
        },
      ]
    }
    title="deviceLists.query.searchPills.clause.parameterType.title"
  />
  <StyledWithResponsiveMode
    ariaLabel="deviceLists.query.searchPills.clause.operationType.ariaLabel"
    className="operation-type"
    defaultSelectedKey="="
    onChange={[Function]}
    options={
      Array [
        Object {
          "key": "=",
          "text": "=",
        },
        Object {
          "key": "!=",
          "text": "!=",
        },
      ]
    }
    title="deviceLists.query.searchPills.clause.operationType.title"
  />
  <StyledTextFieldBase
    ariaLabel="deviceLists.query.searchPills.clause.value.ariaLabel"
    className="clause-value"
    onChange={[Function]}
    placeholder="deviceLists.query.searchPills.clause.value.placeholder"
    required={true}
    title="deviceLists.query.searchPills.clause.value.title"
    value="enabled"
  />
  <CustomizedIconButton
    ariaLabel="deviceLists.query.searchPills.clause.remove.ariaLabel"
    className="remove-pill"
    data={0}
    iconProps={
      Object {
        "iconName": "Clear",
      }
    }
    onClick={[Function]}
    title="deviceLists.query.searchPills.clause.remove.title"
    type="button"
  />
</section>
`;

exports[`components/devices/DeviceQueryClause matches snapshot without operation 1`] = `
<section
  className="search-pill active no-operator"
  key="query-0"
>
  <StyledWithResponsiveMode
    ariaLabel="deviceLists.query.searchPills.clause.parameterType.ariaLabel"
    className="parameter-type"
    componentRef={
      Object {
        "current": null,
      }
    }
    onChange={[Function]}
    options={
      Array [
        Object {
          "key": "dcm",
          "text": "deviceLists.query.searchPills.clause.parameterType.items.capabilityModelId",
        },
        Object {
          "key": "interface",
          "text": "deviceLists.query.searchPills.clause.parameterType.items.interfaceId",
        },
        Object {
          "key": "status",
          "text": "deviceLists.query.searchPills.clause.parameterType.items.status",
        },
      ]
    }
    title="deviceLists.query.searchPills.clause.parameterType.title"
  />
  <StyledTextFieldBase
    ariaLabel="deviceLists.query.searchPills.clause.value.ariaLabel"
    className="clause-value"
    onChange={[Function]}
    placeholder="deviceLists.query.searchPills.clause.value.placeholder"
    required={true}
    title="deviceLists.query.searchPills.clause.value.title"
    value="enabled"
  />
  <CustomizedIconButton
    ariaLabel="deviceLists.query.searchPills.clause.remove.ariaLabel"
    className="remove-pill"
    data={0}
    iconProps={
      Object {
        "iconName": "Clear",
      }
    }
    onClick={[Function]}
    title="deviceLists.query.searchPills.clause.remove.title"
    type="button"
  />
</section>
`;
